// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Docs to markdown Exclude description should exclude type with array 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type    | Default | Required | Description                                                        |
| --------------------------------- | ------- | ------- | -------- | ------------------------------------------------------------------ |
| [items](#markdown-header-items)   | arrayOf |         | true     |                                                                    |
| [margin](#markdown-header-margin) | Union   | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| component                         | node    |         | false    | @internal Use another root component.                              |

## Complex Props

### items
Type: _arrayOf_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | string | false    |
| backgroundColor                     | string | false    |
| backgroundImage                     | string | false    |
| color                               | string | false    |
| fullWidth                           | bool   | false    |
| category                            | string | false    |
| title                               | string | true     |
| body                                | string | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | string | true     |
| target | string | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | string | true     |
| [type](#markdown-header-type) | enum   | true     |

##### type
Type: _enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |

--------------------------------------------------------------------------------

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | enum | false    |
> | [bottom](#markdown-header-bottom) | enum | false    |
> 
> ##### top
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Exclude description should exclude type with regex 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type    | Default | Required | Description                                                        |
| --------------------------------- | ------- | ------- | -------- | ------------------------------------------------------------------ |
| [items](#markdown-header-items)   | arrayOf |         | true     |                                                                    |
| [margin](#markdown-header-margin) | Union   | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| component                         | node    |         | false    | @internal Use another root component.                              |

## Complex Props

### items
Type: _arrayOf_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | string | false    |
| backgroundColor                     | string | false    |
| backgroundImage                     | string | false    |
| color                               | string | false    |
| fullWidth                           | bool   | false    |
| category                            | string | false    |
| title                               | string | true     |
| body                                | string | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | string | true     |
| target | string | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | string | true     |
| [type](#markdown-header-type) | enum   | true     |

##### type
Type: _enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |

--------------------------------------------------------------------------------

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | enum | false    |
> | [bottom](#markdown-header-bottom) | enum | false    |
> 
> ##### top
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Exclude description should exclude type with string 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type    | Default | Required | Description                                                        |
| --------------------------------- | ------- | ------- | -------- | ------------------------------------------------------------------ |
| [items](#markdown-header-items)   | arrayOf |         | true     |                                                                    |
| [margin](#markdown-header-margin) | Union   | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| component                         | node    |         | false    | @internal Use another root component.                              |

## Complex Props

### items
Type: _arrayOf_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | string | false    |
| backgroundColor                     | string | false    |
| backgroundImage                     | string | false    |
| color                               | string | false    |
| fullWidth                           | bool   | false    |
| category                            | string | false    |
| title                               | string | true     |
| body                                | string | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | string | true     |
| target | string | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | string | true     |
| [type](#markdown-header-type) | enum   | true     |

##### type
Type: _enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |

--------------------------------------------------------------------------------

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | enum | false    |
> | [bottom](#markdown-header-bottom) | enum | false    |
> 
> ##### top
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Exclude key should exclude key with array 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                            | Type    | Default | Required | Description     |
| ------------------------------- | ------- | ------- | -------- | --------------- |
| [items](#markdown-header-items) | arrayOf |         | true     |                 |
| backgroundColor                 | string  |         | true     | @custom-exclude |

## Complex Props

### items
Type: _arrayOf_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | string | false    |
| backgroundColor                     | string | false    |
| backgroundImage                     | string | false    |
| color                               | string | false    |
| fullWidth                           | bool   | false    |
| category                            | string | false    |
| title                               | string | true     |
| body                                | string | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | string | true     |
| target | string | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | string | true     |
| [type](#markdown-header-type) | enum   | true     |

##### type
Type: _enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |
"
`;

exports[`Docs to markdown Exclude key should exclude key with regex 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                            | Type    | Default | Required | Description     |
| ------------------------------- | ------- | ------- | -------- | --------------- |
| [items](#markdown-header-items) | arrayOf |         | true     |                 |
| backgroundColor                 | string  |         | true     | @custom-exclude |

## Complex Props

### items
Type: _arrayOf_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | string | false    |
| backgroundColor                     | string | false    |
| backgroundImage                     | string | false    |
| color                               | string | false    |
| fullWidth                           | bool   | false    |
| category                            | string | false    |
| title                               | string | true     |
| body                                | string | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | string | true     |
| target | string | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | string | true     |
| [type](#markdown-header-type) | enum   | true     |

##### type
Type: _enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |
"
`;

exports[`Docs to markdown Exclude key should exclude key with string 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                            | Type    | Default | Required | Description     |
| ------------------------------- | ------- | ------- | -------- | --------------- |
| [items](#markdown-header-items) | arrayOf |         | true     |                 |
| backgroundColor                 | string  |         | true     | @custom-exclude |

## Complex Props

### items
Type: _arrayOf_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | string | false    |
| backgroundColor                     | string | false    |
| backgroundImage                     | string | false    |
| color                               | string | false    |
| fullWidth                           | bool   | false    |
| category                            | string | false    |
| title                               | string | true     |
| body                                | string | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | string | true     |
| target | string | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | string | true     |
| [type](#markdown-header-type) | enum   | true     |

##### type
Type: _enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |
"
`;

exports[`Docs to markdown Exclude type should exclude type with array 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type   | Default | Required | Description                                                        |
| --------------------------------- | ------ | ------- | -------- | ------------------------------------------------------------------ |
| [margin](#markdown-header-margin) | Union  | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| backgroundColor                   | string |         | true     | @custom-exclude                                                    |

## Complex Props

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | enum | false    |
> | [bottom](#markdown-header-bottom) | enum | false    |
> 
> ##### top
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Exclude type should exclude type with regex 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type   | Default | Required | Description                                                        |
| --------------------------------- | ------ | ------- | -------- | ------------------------------------------------------------------ |
| [margin](#markdown-header-margin) | Union  | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| backgroundColor                   | string |         | true     | @custom-exclude                                                    |

## Complex Props

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | enum | false    |
> | [bottom](#markdown-header-bottom) | enum | false    |
> 
> ##### top
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Exclude type should exclude type with string 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type   | Default | Required | Description                                                        |
| --------------------------------- | ------ | ------- | -------- | ------------------------------------------------------------------ |
| [margin](#markdown-header-margin) | Union  | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| backgroundColor                   | string |         | true     | @custom-exclude                                                    |

## Complex Props

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | enum | false    |
> | [bottom](#markdown-header-bottom) | enum | false    |
> 
> ##### top
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Should handle various input should convert Cards 1`] = `
"# Cards

## Props
| Name                                          | Type    | Default | Required | Description                                                                            |
| --------------------------------------------- | ------- | ------- | -------- | -------------------------------------------------------------------------------------- |
| [itemsPerRow](#markdown-header-items-per-row) | enum    | 3       | true     | The maximum number of items per row. In a narrow/article ribbon, set this to 2.        |
| [theme](#markdown-header-theme)               | enum    |         | false    |                                                                                        |
| collapse                                      | bool    | false   | false    | If \\"true\\" only the first row of cards will be displayed, until user clicks \\"show more\\" |
| showMoreLabel                                 | string  |         | false    |                                                                                        |
| showLessLabel                                 | string  |         | false    |                                                                                        |
| [items](#markdown-header-items)               | arrayOf |         | true     |                                                                                        |

## Complex Props

### itemsPerRow
Type: _enum_

The maximum number of items per row. In a narrow/article ribbon, set this to 2.

**itemsPerRow** should be one of the following values:

| Value | Type   |
| ----- | ------ |
| 1     | Number |
| 2     | Number |
| 3     | Number |

--------------------------------------------------------------------------------

### theme
Type: _enum_

**theme** should be one of the following values:

| Value | Type   |
| ----- | ------ |
| blue  | String |

--------------------------------------------------------------------------------

### items
Type: _arrayOf_

**items** is an array of the following type:

| Name                              | Type   | Required |
| --------------------------------- | ------ | -------- |
| tag                               | string | false    |
| title                             | string | false    |
| body                              | string | false    |
| [type](#markdown-header-type)     | enum   | false    |
| [fields](#markdown-header-fields) | Union  | false    |
| [cta](#markdown-header-cta)       | Object | false    |

#### type
Type: _enum_

| Value   | Type   |
| ------- | ------ |
| null    | null   |
| default | String |
| event   | String |

#### fields
Type: _Union_

##### Object

> | Name                              | Type    | Required |
> | --------------------------------- | ------- | -------- |
> | date                              | string  | true     |
> | location                          | string  | true     |
> | [prices](#markdown-header-prices) | arrayOf | false    |
> 
> ###### prices
> Type: _arrayOf_
> 
> | Name  | Type   | Required |
> | ----- | ------ | -------- |
> | label | string | true     |
> | value | string | true     |
> 


#### cta
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | string | false    |
| target | string | false    |
"
`;

exports[`Docs to markdown Should handle various input should convert CaseList 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type    | Default | Required | Description                                                        |
| --------------------------------- | ------- | ------- | -------- | ------------------------------------------------------------------ |
| [items](#markdown-header-items)   | arrayOf |         | true     |                                                                    |
| [margin](#markdown-header-margin) | Union   | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| backgroundColor                   | string  |         | true     | @custom-exclude                                                    |

## Complex Props

### items
Type: _arrayOf_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | string | false    |
| backgroundColor                     | string | false    |
| backgroundImage                     | string | false    |
| color                               | string | false    |
| fullWidth                           | bool   | false    |
| category                            | string | false    |
| title                               | string | true     |
| body                                | string | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | string | true     |
| target | string | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | string | true     |
| [type](#markdown-header-type) | enum   | true     |

##### type
Type: _enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |

--------------------------------------------------------------------------------

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | enum | false    |
> | [bottom](#markdown-header-bottom) | enum | false    |
> 
> ##### top
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Should handle various input should convert Flow 1`] = `
"# Flow

General component description.


## Props
| Name                                                    | Type   | Default | Required | Description                |
| ------------------------------------------------------- | ------ | ------- | -------- | -------------------------- |
| primitive                                               | number |         | true     | Description of prop \\"foo\\". |
| [literalsAndUnion](#markdown-header-literals-and-union) | Union  |         | true     | Description of prop \\"bar\\". |
| [arr](#markdown-header-arr)                             | Array  |         | true     |                            |
| [func](#markdown-header-func)                           | Object |         | false    |                            |
| [obj](#markdown-header-obj)                             | Object |         | false    |                            |

## Complex Props

### literalsAndUnion
Type: _Union_

Description of prop \\"bar\\".

Should be one of the following:

\`\`\`
'string'
'otherstring'
number
\`\`\`

--------------------------------------------------------------------------------

### arr
Type: _Array_

\`\`\`
any
\`\`\`

--------------------------------------------------------------------------------

### func
Type: _Object_

\`\`\`
(value: string) => void
\`\`\`

--------------------------------------------------------------------------------

### obj
Type: _Object_

\`\`\`
{ subvalue: ?boolean }
\`\`\`
"
`;

exports[`Docs to markdown Should handle various input should convert FlowFooter 1`] = `
"# FlowFooter

## Props
| Name                                | Type  | Default | Required | Description                                                                                          |
| ----------------------------------- | ----- | ------- | -------- | ---------------------------------------------------------------------------------------------------- |
| [social](#markdown-header-social)   | Array |         | true     | An array of social links                                                                             |
| [columns](#markdown-header-columns) | Array |         | true     | An array of columns, where each column contains an array or either LinkModels or plain string labels |

## Complex Props

### social
Type: _Array_

An array of social links

\`\`\`
SocialModel
\`\`\`

--------------------------------------------------------------------------------

### columns
Type: _Array_

An array of columns, where each column contains an array or either LinkModels or plain string labels

Should be one of the following:

\`\`\`
LinkModel
string
\`\`\`
"
`;

exports[`Docs to markdown Should handle various input should convert FlowImageModel 1`] = `
"# FlowImageModel

## Props
| Name                                         | Type    | Default | Required | Description                                                                                                                  |
| -------------------------------------------- | ------- | ------- | -------- | ---------------------------------------------------------------------------------------------------------------------------- |
| src                                          | string  |         | true     | Image src URL                                                                                                                |
| height                                       | number  |         | true     | Original image height                                                                                                        |
| width                                        | number  |         | true     | Original image width                                                                                                         |
| alt                                          | string  |         | false    | Image alt text                                                                                                               |
| contain                                      | boolean | false   | false    | Contain the image inside the area, instead of cropping                                                                       |
| [alignX](#markdown-header-align-x)           | Union   |         | false    | Align the image on X axis, default to center in the browser                                                                  |
| [alignY](#markdown-header-align-y)           | Union   |         | false    | Align the image on Y axis, default to center in the browser                                                                  |
| [crop](#markdown-header-crop)                | Union   |         | false    | The method used when cropping the image: https://docs.imgix.com/apis/url/size/crop                                           |
| fill                                         | boolean | false   | false    | Fill the container element. On mobile it will revert to aspect ratio                                                         |
| maxAspectRatio                               | number  |         | false    | The maximum aspect ratio to use after (height / width) - Adds some sanity to editor images, to ensure they are not too tall. |
| [imgixParams](#markdown-header-imgix-params) | Object  |         | false    | Any custom Imgix params                                                                                                      |
| imageProps                                   | Object  |         | false    | Extra tags to pass as img HTML attributes                                                                                    |
| fadeIn                                       | boolean | false   | false    | Fade in the image when it's loaded. Creates a nice effect with the blurred image                                             |
| disableBlur                                  | boolean | false   | false    | Disable the blurred placeholder shown until size is ready. Will instead show a spinner                                       |

## Complex Props

### alignX
Type: _Union_

Align the image on X axis, default to center in the browser

Should be one of the following:

\`\`\`
'left'
'right'
'center'
\`\`\`

--------------------------------------------------------------------------------

### alignY
Type: _Union_

Align the image on Y axis, default to center in the browser

Should be one of the following:

\`\`\`
'top'
'bottom'
'center'
\`\`\`

--------------------------------------------------------------------------------

### crop
Type: _Union_

The method used when cropping the image: https://docs.imgix.com/apis/url/size/crop

Should be one of the following:

\`\`\`
'faces'
'entropy'
'edges'
'top'
'bottom'
'left'
'right'
''
\`\`\`

--------------------------------------------------------------------------------

### imgixParams
Type: _Object_

Any custom Imgix params

\`\`\`
{
  [key: string]: string,
}
\`\`\`
"
`;

exports[`Docs to markdown Should handle various input should convert FlowLinkModel 1`] = `
"# FlowLinkModel

The LinkModel is used for all navigation links.


## Props
| Name                              | Type   | Default | Required | Description                                                                                            |
| --------------------------------- | ------ | ------- | -------- | ------------------------------------------------------------------------------------------------------ |
| href                              | string |         | true     |                                                                                                        |
| label                             | string |         | false    | Label is the related label or text for the link or button                                              |
| title                             | string |         | false    | The title HTML Attribute, can be used to create a title tooltip. It should be different from the label |
| [target](#markdown-header-target) | Union  |         | false    | The anchor target, uses the browser default (_self) if not set                                         |

## Complex Props

### target
Type: _Union_

The anchor target, uses the browser default (_self) if not set

Should be one of the following:

\`\`\`
'_blank'
'_self'
'_parent'
'_top'
\`\`\`
"
`;

exports[`Docs to markdown Should handle various input should convert Hero 1`] = `
"# Hero

## Props
| Name                                     | Type   | Default | Required | Description                                                                                                   |
| ---------------------------------------- | ------ | ------- | -------- | ------------------------------------------------------------------------------------------------------------- |
| tag                                      | string |         | false    | The \\"tag\\" the small label rendered in the lower corner                                                        |
| headline                                 | string |         | true     | The overall page title                                                                                        |
| [content](#markdown-header-content)      | Union  |         | true     | Content can be a paragraph, or an array of paragraphs                                                         |
| cta                                      | CTA    |         | false    | Add a button with a CTA below the content                                                                     |
| [goBack](#markdown-header-go-back)       | Object |         | false    | The back link to render, to return the user to an overview page                                               |
| [share](#markdown-header-share)          | Object |         | false    | Share widget props, if the Hero should render a Share widget                                                  |
| [margin](#markdown-header-margin)        | enum   |         | false    | Remove the margin between hero and section by setting it to none. Used if the following ribbon has no pattern |
| [pattern](#markdown-header-pattern)      | enum   |         | false    | Use a Pattern instead of the theme                                                                            |
| [mediaType](#markdown-header-media-type) | enum   |         | false    | Type of the media                                                                                             |
| [media](#markdown-header-media)          | Union  |         | false    | The Media object should match the related mediaType                                                           |
| [cardType](#markdown-header-card-type)   | enum   |         | false    | Type of the card                                                                                              |
| [card](#markdown-header-card)            | Union  |         | false    | The Media object should match the related cardType                                                            |
| title                                    | string |         | false    |                                                                                                               |

## Complex Props

### content
Type: _Union_

Content can be a paragraph, or an array of paragraphs

#### string
string


#### arrayOf
string


--------------------------------------------------------------------------------

### goBack
Type: _Object_

The back link to render, to return the user to an overview page

**goBack** is an object with:

| Name  | Type   | Required |
| ----- | ------ | -------- |
| label | string | true     |
| href  | string | true     |

--------------------------------------------------------------------------------

### share
Type: _Object_

Share widget props, if the Hero should render a Share widget

**share** is an object with:

| Name                                               | Type    | Required |
| -------------------------------------------------- | ------- | -------- |
| saveLabel                                          | string  | false    |
| savedLabel                                         | string  | false    |
| shareLabel                                         | string  | false    |
| saveApi                                            | string  | false    |
| [socialNetworks](#markdown-header-social-networks) | arrayOf | false    |
| pageUrl                                            | string  | false    |

#### socialNetworks
Type: _arrayOf_

Social networks to allow sharing from

| Value    | Type   |
| -------- | ------ |
| twitter  | String |
| facebook | String |
| linkedin | String |

--------------------------------------------------------------------------------

### margin
Type: _enum_

Remove the margin between hero and section by setting it to none. Used if the following ribbon has no pattern

**margin** should be one of the following values:

| Value | Type   |
| ----- | ------ |
| none  | String |
| null  | null   |

--------------------------------------------------------------------------------

### pattern
Type: _enum_

Use a Pattern instead of the theme

**pattern** should be one of the following values:

| Value   | Type   |
| ------- | ------ |
| stripes | String |
| dots    | String |
| waves   | String |

--------------------------------------------------------------------------------

### mediaType
Type: _enum_

Type of the media

**mediaType** should be one of the following values:

| Value | Type   |
| ----- | ------ |
| image | String |
| video | String |

--------------------------------------------------------------------------------

### media
Type: _Union_

The Media object should match the related mediaType

#### Object

> | Name   | Type   | Required |
> | ------ | ------ | -------- |
> | src    | string | true     |
> | height | number | true     |
> | width  | number | true     |
> 


#### Object

> | Name | Type   | Required |
> | ---- | ------ | -------- |
> | src  | string | true     |
> 


--------------------------------------------------------------------------------

### cardType
Type: _enum_

Type of the card

**cardType** should be one of the following values:

| Value    | Type   |
| -------- | ------ |
| download | String |
| event    | String |
| contact  | String |

--------------------------------------------------------------------------------

### card
Type: _Union_

The Media object should match the related cardType

#### Object

> | Name                            | Type   | Required |
> | ------------------------------- | ------ | -------- |
> | name                            | string | true     |
> | description                     | string | false    |
> | [image](#markdown-header-image) | Object | false    |
> | buttonLabel                     | string | true     |
> | href                            | string | true     |
> 
> ##### image
> Type: _Object_
> 
> | Name   | Type   | Required |
> | ------ | ------ | -------- |
> | src    | string | true     |
> | height | number | true     |
> | width  | number | true     |
> 


#### Object

> | Name                              | Type    | Required |
> | --------------------------------- | ------- | -------- |
> | tag                               | string  | false    |
> | title                             | string  | false    |
> | body                              | string  | false    |
> | cta                               | CTA     | false    |
> | date                              | string  | false    |
> | location                          | string  | false    |
> | [prices](#markdown-header-prices) | arrayOf | false    |
> 
> ##### prices
> Type: _arrayOf_
> 
> | Name  | Type   | Required |
> | ----- | ------ | -------- |
> | label | string | true     |
> | value | string | true     |
> 


#### Object

> | Name                                  | Type    | Required |
> | ------------------------------------- | ------- | -------- |
> | introduction                          | string  | false    |
> | highlight                             | string  | false    |
> | [hotline](#markdown-header-hotline)   | Object  | false    |
> | [contacts](#markdown-header-contacts) | arrayOf | false    |
> 
> ##### hotline
> Type: _Object_
> 
> Render a hotline card
> 
> | Name                            | Type   | Required |
> | ------------------------------- | ------ | -------- |
> | title                           | string | true     |
> | text                            | string | false    |
> | [phone](#markdown-header-phone) | Object | false    |
> | [email](#markdown-header-email) | Object | false    |
> | simple                          | bool   | false    |
> 
> ###### phone
> Type: _Object_
> 
> | Name  | Type   | Required |
> | ----- | ------ | -------- |
> | href  | string | false    |
> | label | string | false    |
> 
> ###### email
> Type: _Object_
> 
> | Name  | Type   | Required |
> | ----- | ------ | -------- |
> | href  | string | false    |
> | label | string | false    |
> 
> ##### contacts
> Type: _arrayOf_
> 
> Contact persons to render
> 
> | Name                            | Type   | Required |
> | ------------------------------- | ------ | -------- |
> | name                            | string | true     |
> | jobTitle                        | string | false    |
> | department                      | string | false    |
> | [image](#markdown-header-image) | Object | false    |
> | [phone](#markdown-header-phone) | Object | false    |
> | [email](#markdown-header-email) | Object | false    |
> | cta                             | CTA    | false    |
> 
> ###### image
> Type: _Object_
> 
> | Name | Type   | Required |
> | ---- | ------ | -------- |
> | src  | string | false    |
> 
> ###### phone
> Type: _Object_
> 
> | Name  | Type   | Required |
> | ----- | ------ | -------- |
> | href  | string | false    |
> | label | string | false    |
> 
> ###### email
> Type: _Object_
> 
> | Name  | Type   | Required |
> | ----- | ------ | -------- |
> | href  | string | false    |
> | label | string | false    |
> 

"
`;

exports[`Docs to markdown Should handle various input should convert Image 1`] = `
"# Image

Image handles fetching the correct Imgix image, and rendering it onto the page.
By default it will load an image that fills the width of it's container, while keeping the original image aspect ratio


## Props
| Name                               | Type   | Default | Required | Description                                                                                                                   |
| ---------------------------------- | ------ | ------- | -------- | ----------------------------------------------------------------------------------------------------------------------------- |
| children                           | node   |         | false    |                                                                                                                               |
| src                                | string |         | true     | Image src URL                                                                                                                 |
| height                             | number |         | true     | Original image height                                                                                                         |
| width                              | number |         | true     | Original image width                                                                                                          |
| alt                                | string |         | false    | Image alt text                                                                                                                |
| contain                            | bool   | false   | false    | Contain the image inside the area, instead of cropping                                                                        |
| [alignX](#markdown-header-align-x) | enum   |         | false    | Align the image on X axis, default to center in the browser                                                                   |
| [alignY](#markdown-header-align-y) | enum   |         | false    | Align the image on Y axis, default to center in the browser                                                                   |
| [crop](#markdown-header-crop)      | enum   | 'faces' | false    | The method used when cropping the image: https://docs.imgix.com/apis/url/size/crop                                            |
| padded                             | bool   | false   | false    | Add padding around the image - use with \\"contain\\" to create a padded area around the image, so it doesn't extend to the edge. |
| fill                               | bool   | false   | false    | Fill the container element. On mobile it will revert to aspect ratio                                                          |
| mobileFill                         | bool   | false   | false    | Also apply the fill on mobile devices.                                                                                        |
| mobileWidthScale                   | number |         | false    | On mobile, scale the width of the aspect ratio with this - Use to crop the width                                              |
| maxAspectRatio                     | number | 2       | false    | The maximum aspect ratio to use after (height / width) - Adds some sanity to editor images, to ensure they are not too tall.  |
| imgixParams                        | object |         | false    | Any custom Imgix params                                                                                                       |
| imageProps                         | object |         | false    | Extra tags to pass as img HTML attributes                                                                                     |
| fadeIn                             | bool   | false   | false    | Fade in the image when it's loaded. Creates a nice effect with the blurred image                                              |
| disableBlur                        | bool   | false   | false    | Disable the blurred placeholder shown until size is ready. Will instead show a spinner                                        |

## Complex Props

### alignX
Type: _enum_

Align the image on X axis, default to center in the browser

**alignX** should be one of the following values:

| Value  | Type   |
| ------ | ------ |
| left   | String |
| right  | String |
| center | String |

--------------------------------------------------------------------------------

### alignY
Type: _enum_

Align the image on Y axis, default to center in the browser

**alignY** should be one of the following values:

| Value  | Type   |
| ------ | ------ |
| top    | String |
| bottom | String |
| center | String |

--------------------------------------------------------------------------------

### crop
Type: _enum_

The method used when cropping the image: https://docs.imgix.com/apis/url/size/crop

**crop** should be one of the following values:

| Value   | Type   |
| ------- | ------ |
| faces   | String |
| entropy | String |
| edges   | String |
| top     | String |
| bottom  | String |
| left    | String |
| right   | String |
| \\"\\"      | Object |
| null    | null   |
"
`;

exports[`Docs to markdown Should handle various input should convert TextArea 1`] = `
"# TextArea

## Props
| Name     | Type   | Default                               | Required | Description |
| -------- | ------ | ------------------------------------- | -------- | ----------- |
| debounce | object | {<br>  blur: 0,<br>  change: 500<br>} | false    |             |
| updateOn | string | 'blur change'                         | false    |             |
| value    | string |                                       | false    |             |
| onBlur   | func   | () => {}                              | false    |             |
"
`;

exports[`Docs to markdown should convert caselist 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type    | Default | Required | Description                                                        |
| --------------------------------- | ------- | ------- | -------- | ------------------------------------------------------------------ |
| [items](#markdown-header-items)   | arrayOf |         | true     |                                                                    |
| [margin](#markdown-header-margin) | Union   | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| backgroundColor                   | string  |         | true     | @custom-exclude                                                    |

## Complex Props

### items
Type: _arrayOf_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | string | false    |
| backgroundColor                     | string | false    |
| backgroundImage                     | string | false    |
| color                               | string | false    |
| fullWidth                           | bool   | false    |
| category                            | string | false    |
| title                               | string | true     |
| body                                | string | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | string | true     |
| target | string | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | string | true     |
| [type](#markdown-header-type) | enum   | true     |

##### type
Type: _enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |

--------------------------------------------------------------------------------

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | enum | false    |
> | [bottom](#markdown-header-bottom) | enum | false    |
> 
> ##### top
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown should handle no props 1`] = `
"# CaseList

Short description

## No props"
`;
